Evitando login a cada request e animações

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,9 @@
 
     <!--Icons-->
     <script src="https://kit.fontawesome.com/18705aae2a.js" crossorigin="anonymous"></script>
+
+    <!--Animations-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   </head>
   <body>
     <noscript>
